# chatbot

./: README.md  main.py  pyproject.toml  sunum.md
app/: __init__.py  config.py  rag_chain.py  vector_store.py
app/tools/: web_search.py
data/chroma/: chroma.sqlite3
frontend/src/: App.css  App.jsx
sessions/: 058f407f-802b-4ab0-a6cc-2809e7b432cd.json  18a416f7-ca84-4efa-a478-8bd52486f572.json  1de884a1-af05-4b9c-88e8-03f40446861d.json  3d24e0c9-d9ab-4c2e-be5b-cb220940db25.json  40eff070-edca-4fe3-af94-97553cca82f0.json  5b585d0d-e7a9-436a-877d-6da6571af69d.json  902d79f7-3e77-46a8-887b-ae8fc4822f73.json  98ecc9d1-60df-439c-a026-85491fc67b1f.json  bd8f95bd-4bf2-4750-8815-5418ad909317.json  cfe2e3f7-4873-4928-b45b-4a6d481df865.json  d5af1237-26c7-461c-a7ec-6f810896dda9.json  fbcff985-02b3-416e-82c4-d3d3a592e0bb.json  test-1.json
